--- a/pom.xml
+++ b/pom.xml
@@ -83,38 +83,44 @@
 
         <!--        14版本去掉了blink-->
         <!-- https://mvnrepository.com/artifact/org.apache.flink/flink-table-planner -->
-<!--        <dependency>
+        <dependency>
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-table-planner_2.12</artifactId>
             <version>1.14.4</version>
-            <scope>provided</scope>
-        </dependency>-->
+            <!--            <scope>provided</scope>-->
+        </dependency>
 
-<!--     fsql   解析格式-->
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-table-common</artifactId>
+            <version>1.14.4</version>
+        </dependency>
+
+        <!--     fsql   解析格式-->
         <dependency>
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-csv</artifactId>
             <version>1.14.4</version>
         </dependency>
 
+        <!--        <dependency>-->
+        <!--            <groupId>org.apache.flink</groupId>-->
+        <!--            <artifactId>flink-json</artifactId>-->
+        <!--            <version>1.14.4</version>-->
+        <!--        </dependency>-->
+
 
         <!--        本地magus-->
-        <dependency>
-            <groupId>com.magus.jdbc</groupId>
-            <artifactId>openplant</artifactId>
-            <version>20210723</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.scala-lang</groupId>
-            <artifactId>scala-library</artifactId>
-            <version>2.12.10</version>
-        </dependency>
+        <!--        <dependency>
+                    <groupId>com.magus.jdbc</groupId>
+                    <artifactId>openplant</artifactId>
+                    <version>20210723</version>
+                </dependency>-->
 
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
-            <version>2.0.2</version>
+            <version>2.0.3</version>
         </dependency>
         <dependency>
             <groupId>org.jetbrains</groupId>
