--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,10 @@
     <artifactId>flink</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <properties>
+        <flink.version>1.14.4</flink.version>
+        <scala.library.version>2.12</scala.library.version>
+    </properties>
 
     <dependencies>
         <dependency>
@@ -16,98 +20,97 @@
             <version>2.12.10</version>
         </dependency>
 
-
         <!-- provided（表示执行和打包都不用此依赖，只有编译时用 集群的环境都有）-->
         <dependency>
             <groupId>org.apache.flink</groupId>
-            <artifactId>flink-streaming-scala_2.12</artifactId>
-            <version>1.14.4</version>
+            <artifactId>flink-streaming-scala_${scala.library.version}</artifactId>
+            <version>${flink.version}</version>
             <!--            <scope>provided</scope>-->
         </dependency>
         <dependency>
             <groupId>org.apache.flink</groupId>
-            <artifactId>flink-streaming-java_2.12</artifactId>
-            <version>1.14.4</version>
+            <artifactId>flink-streaming-java_${scala.library.version}</artifactId>
+            <version>${flink.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-core</artifactId>
-            <version>1.14.4</version>
+            <version>${flink.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.apache.flink</groupId>
-            <artifactId>flink-clients_2.12</artifactId>
-            <version>1.14.4</version>
+            <artifactId>flink-clients_${scala.library.version}</artifactId>
+            <version>${flink.version}</version>
         </dependency>
 
         <!--        状态后端-->
         <dependency>
             <groupId>org.apache.flink</groupId>
-            <artifactId>flink-statebackend-rocksdb_2.12</artifactId>
-            <version>1.14.4</version>
+            <artifactId>flink-statebackend-rocksdb_${scala.library.version}</artifactId>
+            <version>${flink.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.apache.flink</groupId>
-            <artifactId>flink-scala_2.12</artifactId>
-            <version>1.14.4</version>
+            <artifactId>flink-scala_${scala.library.version}</artifactId>
+            <version>${flink.version}</version>
             <scope>compile</scope>
         </dependency>
 
         <dependency>
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-java</artifactId>
-            <version>1.14.4</version>
+            <version>${flink.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.apache.flink</groupId>
-            <artifactId>flink-connector-kafka_2.12</artifactId>
-            <version>1.14.4</version>
+            <artifactId>flink-connector-kafka_${scala.library.version}</artifactId>
+            <version>${flink.version}</version>
         </dependency>
 
         <!--        桥接器-->
         <dependency>
             <groupId>org.apache.flink</groupId>
-            <artifactId>flink-table-api-java-bridge_2.12</artifactId>
-            <version>1.14.4</version>
+            <artifactId>flink-table-api-java-bridge_${scala.library.version}</artifactId>
+            <version>${flink.version}</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.apache.flink/flink-table-runtime -->
         <dependency>
             <groupId>org.apache.flink</groupId>
-            <artifactId>flink-table-runtime_2.12</artifactId>
-            <version>1.14.4</version>
+            <artifactId>flink-table-runtime_${scala.library.version}</artifactId>
+            <version>${flink.version}</version>
         </dependency>
 
         <!--        14版本去掉了blink-->
         <!-- https://mvnrepository.com/artifact/org.apache.flink/flink-table-planner -->
         <dependency>
             <groupId>org.apache.flink</groupId>
-            <artifactId>flink-table-planner_2.12</artifactId>
-            <version>1.14.4</version>
+            <artifactId>flink-table-planner_${scala.library.version}</artifactId>
+            <version>${flink.version}</version>
             <!--            <scope>provided</scope>-->
         </dependency>
 
         <dependency>
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-table-common</artifactId>
-            <version>1.14.4</version>
+            <version>${flink.version}</version>
         </dependency>
 
         <!--     fsql   解析格式-->
         <dependency>
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-csv</artifactId>
-            <version>1.14.4</version>
+            <version>${flink.version}</version>
         </dependency>
 
-        <!--        <dependency>-->
-        <!--            <groupId>org.apache.flink</groupId>-->
-        <!--            <artifactId>flink-json</artifactId>-->
-        <!--            <version>1.14.4</version>-->
-        <!--        </dependency>-->
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-json</artifactId>
+            <version>${flink.version}</version>
+        </dependency>
 
 
         <!--        本地magus-->
@@ -137,7 +140,7 @@
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.module</groupId>
-            <artifactId>jackson-module-scala_2.12</artifactId>
+            <artifactId>jackson-module-scala_${scala.library.version}</artifactId>
             <version>2.13.2</version>
             <!--            <scope>provided</scope>-->
         </dependency>
@@ -152,13 +155,19 @@
         <!--        mysql sink-->
         <dependency>
             <groupId>org.apache.flink</groupId>
-            <artifactId>flink-connector-jdbc_2.12</artifactId>
-            <version>1.14.4</version>
+            <artifactId>flink-connector-jdbc_${scala.library.version}</artifactId>
+            <version>${flink.version}</version>
         </dependency>
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.48</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-cep_2.12</artifactId>
+            <version>${flink.version}</version>
         </dependency>
 
 
@@ -184,7 +193,7 @@
                 <artifactId>scala-maven-plugin</artifactId>
                 <version>3.2.2</version>
                 <!--                <configuration>-->
-                <!--                    <scalaCompatVersion>2.12</scalaCompatVersion>-->
+                <!--                    <scalaCompatVersion>${scala.library.version}</scalaCompatVersion>-->
                 <!--                    <scalaVersion>2.12.10</scalaVersion>-->
                 <!--                    <encoding>UTF-8</encoding>-->
                 <!--                </configuration>-->
