--- a/pom.xml
+++ b/pom.xml
@@ -166,6 +166,12 @@
 
         <dependency>
             <groupId>org.apache.flink</groupId>
+            <artifactId>flink-connector-elasticsearch6_2.12</artifactId>
+            <version>1.10.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.flink</groupId>
             <artifactId>flink-cep_2.12</artifactId>
             <version>${flink.version}</version>
         </dependency>
