--- a/pom.xml
+++ b/pom.xml
@@ -161,7 +161,8 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.48</version>
+<!--            <version>5.1.48</version>-->
+            <version>8.0.26</version>
         </dependency>
 
         <dependency>
@@ -174,6 +175,14 @@
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-cep_2.12</artifactId>
             <version>${flink.version}</version>
+        </dependency>
+
+<!--        ****************** cdc *****************-->
+        <!--2022-06-23  mysql cdc-->
+        <dependency>
+            <groupId>com.ververica</groupId>
+            <artifactId>flink-connector-mysql-cdc</artifactId>
+            <version>2.2.1</version>
         </dependency>
 
 
